--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,12 @@ jacocoTestReport {
         csv.enabled false
         html.destination "${buildDir}/reports/jacoco"
     }
+    afterEvaluate {
+    	classDirectories = files(classDirectories.files.collect {
+    		fileTree(dir: "${buildDir}/classes/main",
+    		exclude: ['it/itjustworks/emergency/Emergency.class'])
+    	})
+    }
 }
 
 repositories {
