--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
 dependencies {
 	compile 'com.google.code.gson:gson:2.8.0'
 	compile 'com.squareup.okhttp3:okhttp:3.6.0'
+	compile 'com.vdurmont:emoji-java:3.1.3'
     testCompile 'junit:junit:4.12'
     testCompile 'com.github.stefanbirkner:system-rules:1.16.0'
     testCompile 'org.mockito:mockito-core:1.+'
